# spoutdx-ffi

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  USAGE_DLL.md  dev.ps1  dev.sh  dist.ps1
docs/: ARCHITECTURE.md  DESIGN_PHILOSOPHY.md  ERROR_HANDLING.md  README.md  REQUIREMENTS.md  ROADMAP.md  TESTING_STRATEGY.md
docs/impl/: RECEIVER_IMPLEMENTATION_PLAN.md
examples/: Cargo.toml  build.rs  ping.cpp
examples/.cargo/: config.toml
examples/src/: main.rs
include/spoutdx_ffi/: spoutdx_ffi.h
src/: spoutdx_ffi.cpp
