[package]
name = "ping"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Storage_FileSystem",
] }
